--- a/.gitignore
+++ b/.gitignore
@@ -127,12 +127,20 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-/.idea/misc.xml
-/.idea/modules.xml
-/.idea/inspectionProfiles/profiles_settings.xml
-/.idea/inspectionProfiles/Project_Default.xml
-/.idea/python-terminal.xml
-/.idea/vcs.xml
-/.idea/yatube_project.iml
-/.idea/workspace.xml
-/.idea/.name
+
+# Папки, создаваемые средой разработки
+.idea
+.DS_Store
+.AppleDouble
+.LSOverride
+
+*.sublime-project
+*.sublime-workspace
+
+.vscode/
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
+
+.mypy_cache
