--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==2.2.19
 django-debug-toolbar==3.2.4
 Pillow==9.0.1
+python-dotenv==0.19.2
 pytz==2021.3
 sorl-thumbnail==12.8.0
 sqlparse==0.4.2
